--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <body bgcolor=gray>
 <center>
-<h2><font color=yellow>Hello from Kirpaniou Page!</font><h2>
+<h2><font color=yellow>Hello from Kirpaniou Page!</font></h2>
 
 <font color=magenta>www.kirpaniousuperpage.com</font>
 </center>
